tests/crablangdoc-ui/crablangc-check-passes.rs
#![feature(crablangdoc_internals)]
#![feature(crablangdoc_internals)] //~ ERROR

pub fn foo() {}
